--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,52 @@
-/* your code */
+table
+{
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+th
+{
+	padding: 10px 20px;
+	text-align: center;
+	border-bottom: 1px solid #ccc;
+	background-color: #060270;
+	color: white;
+}
+#t1
+{
+	margin: 10px;
+	height: 30px;
+	text-align: center;
+	border-bottom: 1px solid #ccc;
+	background-color: white;
+}
+#t2
+{
+	margin: 10px;
+	height: 30px;
+	padding: 10px 20px;
+	text-align: center;
+	border-bottom: 1px solid #ccc;
+	background-color: #DBD4D4;
+}
+#t3
+{
+	padding: 10px 20px;
+	text-align: center;
+	border-bottom: 1px solid #ccc;
+	height: 30px;
+	margin: 10px;
+}
+#t4
+{
+	margin: 10px;
+	height: 30px;
+	padding: 10px 20px;
+	text-align: center;
+	border-bottom: 1px solid #ccc;
+	background-color: #DBD4D4;
+}
+
